<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LY_FOX"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ST_FOX_GAMER_NAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/ST_FOX_GAMER_NAME" />

    <EditText
        android:id="@+id/ED_FOX_GAMER_NAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ED_FOX_GAMER_NAME" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/BT_FOX_START"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FOX_START" />
    </LinearLayout>

</LinearLayout>