<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LY_GAME"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/GAME_GAME_ROLE" />

            <EditText
                android:id="@+id/ED_GAME_GAME_TYPE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textShortMessage"
                android:maxLength="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GAME_ID" />

            <EditText
                android:id="@+id/ED_GAME_GAME_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textShortMessage"
                android:maxLength="5" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/GAME_RB_GPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="false"
                android:text="@string/GAME_GPS" />

            <RadioButton
                android:id="@+id/GAME_RB_CONNECTED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="false"
                android:text="@string/GAME_CONNECTED" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GAME_LAST_UPDATE" />

            <EditText
                android:id="@+id/ED_GAME_LAST_UPDATE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="datetime"
                android:maxLength="15" >
            </EditText>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TV_GAME_FOX_LAST_UPDATE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GAME_FOX_LAST_UPDATE" />

            <EditText
                android:id="@+id/ED_GAME_FOX_LAST_UPDATE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="datetime"
                android:maxLength="15" >
            </EditText>
        </LinearLayout>
        
          <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GAME_BUFFERED" />

            <EditText
                android:id="@+id/ED_GAME_BUFFERED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="datetime"
                android:maxLength="15" >
            </EditText>
        </LinearLayout>

    </LinearLayout>

    <kn.uni.gis.foxhunt.CompassImageView
        android:id="@+id/IV_COMPASS_GAME"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:layerType="hardware"
        android:src="@drawable/compass" />

</LinearLayout>